
public class Tags
{
    public static string Enemy = "Enemy";
    public static string BossEnemy = "BossEnemy";
    public static string EnemyFire = "EnemyFire";
    public static string EnemyRocket = "EnemyRocket";
    public static string BigMonster = "BigMonster";

    public static string Player = "Player";
    public static string HiddenPlayer = "HiddenPlayer";

    public static string Missile = "Missile";
    public static string Meteor = "Meteor";
    public static string SmallStones = "SmallStones";
    public static string Stones = "Stones";
    public static string Stones1 = "Stones1";
    
    
    public static string Bomb = "Bomb";
    public static string Bullet = "Bullet";
    public static string Laser = "Laser";
    
    public static string PowerUp = "PowerUp";
    public static string HealingPowerUp = "HealingPowerUp";
    public static string Astronaut = "Astronaut";
    public static string ShieldPowerUp = "ShieldPowerUp";
    public static string ShieldObj = "ShieldObj";
    public static string X2PowerUp = "X2PowerUp";
    public static string HidePowerUp = "HidePowerUp";
    public static string TripleShuotPowerUp = "TripleShuotPowerUp";

    /// <summary>
    /// Animation Tags
    /// </summary>
    public static string collisionAnimation = "Collision";
    public static string leftAnimation = "Left";
    public static string rightAnimation = "Right";

}
